* Refactored SIUIEventGenerator into an abstract class. 
* Updated logging of UI to include all windows being displayed. This now picks up the keyboard.
* Refactored event sending code and background sending detection. Now a lot simpler due to using blocks.
* Removed caching of view handers because we simply don't need it. Also made code simpler.

h1. Version 0.1.6, March 2012

* Added more data to the display of a UI tree by breaking out the visitor code using the visitor pattern and delegate pattern.
* Added handlers for UIButtons and UILabels so that the print tree function can work better.
* Added label text, button titles, UIView tags, accessibility Identifiers, values and labels as attributes to be printed.
* Updated dNodi to 0.3.4 to fix issues with name clashes on properties of nodes.
* Added a new macro which waits for animations to finish on a specific UIView.

h1. Version 0.1.5, March 2012

* Switched in app report to avoid using the root view controller because not every app has one.

h1. Version 0.1.4, March 2012

* Fixed missing header. 
* Adjusted so that macros work in ARC projects.
* Added ARC based test project.

h1. Version 0.1.3, Febuary 2012

* Rewrote the class scanning to be more reliable when analysing classes for find mappings.
* Refactored the touch synthesis code.
* Added swipe gestures.

h1. Version 0.1.2, Feburary 2012

* Updated dUsefulStuff to obtain access to a better error handling routine.
* Added KVC complient view attribute analysis.
* Adding assert macros.
* Added new in app display of results.
* Injected SIStepMapping into implementation classes storage area before call so class can access it. Mainly for testing.
* Revamped output of reporting in log.
* Updated to use dNodi (replacement for DXPath).
* More work on UI utils.
* More work on macros. Added assert macros.
* Added shutdown button to in app report to shutdown Simon.
* Added a UI based report for viewing results.
* Lots more doco.