@@ -11,6 +11,7 @@
 #import "AbstractTestWithControlsOnView.h"
 #import "SIUITooManyFoundException.h"
 #import "SIUINotFoundException.h"
+#import "NSObject+Simon.h"
 
 #define catchMessage(msg) \
 do { \
@@ -467,6 +468,43 @@ GHFail(@"Mapping has not worked");
 	
 }
 
+#pragma mark - Text entry
+
+-(void) testEnterTextIntoView {
+	[self executeBlockOnMainThread:^{
+		self.testViewController.textField.text = @"";
+	}];
+	
+	NSString *text = @"ABC DEF GHI klm nop qrs tuv-w.y,y:z";
+	[SIUIApplication application].disableKeyboardAutocorrect = YES;
+
+	SIEnterText(self.testViewController.textField, text);
+	
+	__block NSString *enteredText = nil;
+	[self executeBlockOnMainThread:^{
+		enteredText = [self.testViewController.textField.text retain];
+	}];
+	[enteredText autorelease];
+	GHAssertEqualStrings(enteredText, text, @"Text not correct");
+}
+
+-(void) testEnterTextIntoViewWithQuery {
+	[self executeBlockOnMainThread:^{
+		self.testViewController.textField.text = @"";
+	}];
+	
+	NSString *text = @"ABC DEF GHI klm nop qrs tuv-w.y,y:z";
+	[SIUIApplication application].disableKeyboardAutocorrect = YES;
+	
+	SIEnterText(@"//UITextField[0]", text);
+	
+	__block NSString *enteredText = nil;
+	[self executeBlockOnMainThread:^{
+		enteredText = [self.testViewController.textField.text retain];
+	}];
+	[enteredText autorelease];
+	GHAssertEqualStrings(enteredText, text, @"Text not correct");
+}
 
 #pragma mark - Helpers
 
